k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: coinbase-ws
spec:
  selector:
    app: coinbase-ws
  ports:
  - port: 8000
    targetPort: 8000
  type: ClusterIP
